--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,7 +7,7 @@
 <body>
 <h1>User query history</h1>
              <p/>
-                <form name="userquery" id="userquery" action="http://127.0.0.1:5000/history" method="post">
+                <form name="userquery" id="userquery" action="/history" method="post">
                     Which user's query history would you like to look up? Enter username: <INPUT SIZE=32 id="uname" name="uname" TYPE='text' required/><p/>
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                     <button id="submit" type="submit">Submit</button>
