--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
             <body>
             <h1>User Login</h1>
              <p/>
-                <form name="login" id="login" action="http://127.0.0.1:5000/login" method="post">
+                <form name="login" id="login" action="/login" method="post">
                     Username: <INPUT SIZE=32 id="uname" name="uname" TYPE='text'/><p/>
                     Password: <INPUT SIZE=32 id="pword" name="pword" TYPE='text'/><p/>
                     2-fac method: <INPUT SIZE=32 id="2fa" name="2fa" TYPE='text'/><p/>
