--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
             <body>
              <h1>User Registration</h1>
              <p/>
-                <form name="register" id="register" action="http://127.0.0.1:5000/register" method="post">
+                <form name="register" id="register" action="/register" method="post">
                     Username: <INPUT SIZE=32 id="uname" name="uname" TYPE='text' required/><p/>
                     Password: <INPUT SIZE=32 id="pword" name="pword" TYPE='text' required/><p/>
                     Cell Phone Number: <INPUT SIZE=32 id="2fa" name="2fa" TYPE='text' required/><p/>
